Fix: AK47 material instance

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1302,7 +1302,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Textures/AK74U
+ContentBrowserDrawer.SelectedPaths=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1379,14 +1379,14 @@ ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/AK47/Mati_AK47
-MRUItem1=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK74U/SK_AK74U_Y
-MRUItem2=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK74U/SK_AK74U_X
-MRUItem3=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47
-MRUItem4=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Textures/AK74U/T_AK74U_M_MSK
-MRUItem5=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/Master_Material/Mat_Weapon_Master_USE
-MRUItem6=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Sight_Reddot_0
-MRUItem7=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47
+MRUItem0=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47
+MRUItem1=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/AK47/Mati_AK47
+MRUItem2=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK74U/SK_AK74U_Y
+MRUItem3=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK74U/SK_AK74U_X
+MRUItem4=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47
+MRUItem5=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Textures/AK74U/T_AK74U_M_MSK
+MRUItem6=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/Master_Material/Mat_Weapon_Master_USE
+MRUItem7=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Sight_Reddot_0
 MRUItem8=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Suppressor_0
 MRUItem9=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Vertgrip_0
 MRUItem10=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton1
@@ -2428,6 +2428,7 @@ Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
+MaterialEditorInstanceConstant.ParameterGroups=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
@@ -2662,6 +2663,7 @@ TakeRecorderMicrophoneAudioSourceSettings=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Parameters,MaterialEditorInstanceConstant.ParameterGroups.Pattern/Color,MaterialEditorInstanceConstant.ParameterGroups.TextureMaps
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2819,6 +2821,7 @@ BP_Sight_Reddot_0_C="\"Object.AttachmentSync.AttachmentAttributes\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47.BP_AK47;
+RecentlyPlaced=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47.SK_AK47;
 RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/BP_Cylinder.BP_Cylinder;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
@@ -3146,7 +3149,7 @@ Results=None
 Materials_LastSelectedPipeline=InterchangeGenericMaterialPipeline
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
