Edit: disable hud in firstpersoncharacter hudactive variable

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,10 +168,17 @@ MRUItem1=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
 LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD.UI_HUD
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol.BP_Weapon_Pistol
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MENU.UI_MENU
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -358,6 +365,59 @@ ExponentialHeightFog.Cooking=True
 ExponentialHeightFog.Replication=True
 ExponentialHeightFog.Networking=True
 ExponentialHeightFog.Actor=True
+BP_Weapon_Pistol_C.Tick=True
+BP_Weapon_Pistol_C.Animations=True
+BP_Weapon_Pistol_C.Weapon=True
+BP_Weapon_Pistol_C.FireLogic=True
+BP_Weapon_Pistol_C.WeaponStats=True
+BP_Weapon_Pistol_C.Default=True
+BP_Weapon_Pistol_C.ADS=True
+BP_Weapon_Pistol_C.WeaponClip=True
+BP_Weapon_Pistol_C.Audio=True
+BP_Weapon_Pistol_C.Procedural Anims=True
+BP_Weapon_Pistol_C.Weapon Stats=True
+BP_Weapon_Pistol_C.Replication=True
+BP_Weapon_Pistol_C.Rendering=True
+BP_Weapon_Pistol_C.Collision=True
+BP_Weapon_Pistol_C.Actor=True
+BP_Weapon_Pistol_C.Input=True
+BP_Weapon_Pistol_C.HLOD=True
+BP_Weapon_Pistol_C.Physics=True
+BP_Weapon_Pistol_C.WorldPartition=True
+BP_Weapon_Pistol_C.Events=True
+UI_MENU_C.Appearance=True
+UI_MENU_C.Input=True
+UI_MENU_C.Interaction=True
+UI_MENU_C.Designer=True
+UI_MENU_C.Performance=True
+UI_MENU_C.Layout=True
+UI_MENU_C.Behavior=True
+UI_MENU_C.Render Transform=True
+UI_MENU_C.Localization=True
+UI_MENU_C.Accessibility=True
+UI_MENU_C.Rendering=True
+UI_MENU_C.Navigation=True
+UI_HUD_C.Default=True
+UI_HUD_C.Appearance=True
+UI_HUD_C.Input=True
+UI_HUD_C.Interaction=True
+UI_HUD_C.Designer=True
+UI_HUD_C.Performance=True
+UI_HUD_C.Layout=True
+UI_HUD_C.Behavior=True
+UI_HUD_C.Render Transform=True
+UI_HUD_C.Localization=True
+UI_HUD_C.Accessibility=True
+UI_HUD_C.Rendering=True
+UI_HUD_C.Navigation=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1449,8 +1509,12 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/bodycamFPSkit/Maps/Map_Test
-MRUItem1=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
+MRUItem0=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MENU
+MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
+MRUItem3=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
+MRUItem4=/Game/bodycamFPSkit/Maps/Map_Test
+MRUItem5=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1465,7 +1529,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1481,4 +1545,149 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [MessageLog]
 LastLogListing=MapCheck
+
+[WidgetTemplatesExpanded]
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+bCommonResolutionSelected=False
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
+
+[AssetEditorToolkitTabLocation]
+/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol.BP_Weapon_Pistol=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bEnableInputTriggerSupportWarnings=False
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=True
+bEnableContextMenuTimeSlicing=True
+ContextMenuTimeSlicingThresholdMs=50
+bIncludeActionsForSelectedAssetsInContextMenu=False
+bLimitAssetActionBindingToSingleSelectionOnly=False
+bLoadSelectedAssetsForContextMenuActionBinding=True
+bDoNotMarkAllInstancesDirtyOnDefaultValueChange=True
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
