Config: reenable ballistics plugin for UE5.3

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,17 +168,15 @@ MRUItem1=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
 LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD.UI_HUD
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol.BP_Weapon_Pistol
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MENU.UI_MENU
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -418,6 +416,95 @@ K2Node_VariableSet.DefaultValueCategory=True
 K2Node_VariableSet.Events=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+BP_FirstPersonCharacter_C.TransformCommon=True
+BP_FirstPersonCharacter_C.Animation=True
+BP_FirstPersonCharacter_C.Mesh=True
+BP_FirstPersonCharacter_C.Tick=True
+BP_FirstPersonCharacter_C.Default=True
+BP_FirstPersonCharacter_C.Save=True
+BP_FirstPersonCharacter_C.ComponentTick=True
+BP_FirstPersonCharacter_C.Crouch=True
+BP_FirstPersonCharacter_C.Weapon Sway=True
+BP_FirstPersonCharacter_C.Procedural Walk=True
+BP_FirstPersonCharacter_C.Slide=True
+BP_FirstPersonCharacter_C.Physics=True
+BP_FirstPersonCharacter_C.Collision=True
+BP_FirstPersonCharacter_C.Lean=True
+BP_FirstPersonCharacter_C.Recoil=True
+BP_FirstPersonCharacter_C.Lighting=True
+BP_FirstPersonCharacter_C.Inputs=True
+BP_FirstPersonCharacter_C.AIM=True
+BP_FirstPersonCharacter_C.FOV=True
+BP_FirstPersonCharacter_C.HUD=True
+BP_FirstPersonCharacter_C.SkinWeights=True
+BP_FirstPersonCharacter_C.Rendering=True
+BP_FirstPersonCharacter_C.Clothing=True
+BP_FirstPersonCharacter_C.LeaderPoseComponent=True
+BP_FirstPersonCharacter_C.AnimationRig=True
+BP_FirstPersonCharacter_C.Deformer=True
+BP_FirstPersonCharacter_C.HLOD=True
+BP_FirstPersonCharacter_C.PathTracing=True
+BP_FirstPersonCharacter_C.Mobile=True
+BP_FirstPersonCharacter_C.Navigation=True
+BP_FirstPersonCharacter_C.RayTracing=True
+BP_FirstPersonCharacter_C.VirtualTexture=True
+BP_FirstPersonCharacter_C.Tags=True
+BP_FirstPersonCharacter_C.AssetUserData=True
+BP_FirstPersonCharacter_C.Replication=True
+BP_FirstPersonCharacter_C.ComponentReplication=True
+BP_FirstPersonCharacter_C.Activation=True
+BP_FirstPersonCharacter_C.Variable=True
+BP_FirstPersonCharacter_C.Cooking=True
+BP_FirstPersonCharacter_C.Character Movement (General Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Walking=True
+BP_FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_FirstPersonCharacter_C.Character Movement: Gravity=True
+BP_FirstPersonCharacter_C.Character Movement (Networking)=True
+BP_FirstPersonCharacter_C.Character Movement: Swimming=True
+BP_FirstPersonCharacter_C.Character Movement: Flying=True
+BP_FirstPersonCharacter_C.Character Movement: Custom Movement=True
+BP_FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_FirstPersonCharacter_C.Character Movement=True
+BP_FirstPersonCharacter_C.Character Movement: Avoidance=True
+BP_FirstPersonCharacter_C.RootMotion=True
+BP_FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_FirstPersonCharacter_C.NavMovement=True
+BP_FirstPersonCharacter_C.Velocity=True
+BP_FirstPersonCharacter_C.PlanarMovement=True
+BP_FirstPersonCharacter_C.MovementComponent=True
+BP_FirstPersonCharacter_C.Shape=True
+BP_FirstPersonCharacter_C.Character=True
+BP_FirstPersonCharacter_C.CoyoteTime=True
+BP_FirstPersonCharacter_C.ProceduralWalk=True
+BP_FirstPersonCharacter_C.WeaponSway=True
+BP_FirstPersonCharacter_C.MyCharacter=True
+BP_FirstPersonCharacter_C.GunClipping=True
+BP_FirstPersonCharacter_C.ProceduralIdle=True
+BP_FirstPersonCharacter_C.WeaponInventory=True
+BP_FirstPersonCharacter_C.EquipUnequip=True
+BP_FirstPersonCharacter_C.LowHigh=True
+BP_FirstPersonCharacter_C.Camera=True
+BP_FirstPersonCharacter_C.Pawn=True
+BP_FirstPersonCharacter_C.Actor=True
+BP_FirstPersonCharacter_C.Input=True
+BP_FirstPersonCharacter_C.WorldPartition=True
+BP_FirstPersonCharacter_C.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+BP_Weapon_Pickup_Shotgun_C.Default=True
+BP_Weapon_Pickup_Shotgun_C.Tick=True
+BP_Weapon_Pickup_Shotgun_C.WeaponVars=True
+BP_Weapon_Pickup_Shotgun_C.Replication=True
+BP_Weapon_Pickup_Shotgun_C.Rendering=True
+BP_Weapon_Pickup_Shotgun_C.Collision=True
+BP_Weapon_Pickup_Shotgun_C.Actor=True
+BP_Weapon_Pickup_Shotgun_C.Input=True
+BP_Weapon_Pickup_Shotgun_C.HLOD=True
+BP_Weapon_Pickup_Shotgun_C.Physics=True
+BP_Weapon_Pickup_Shotgun_C.WorldPartition=True
+BP_Weapon_Pickup_Shotgun_C.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1498,6 +1585,12 @@ Voice.TimeStamp=2023.09.29-21.14.17
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2023.09.29-21.14.10
 MovieSceneCapture.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.09.29-21.14.13
+SequencerWidgets.LastCompileMethod=Unknown
+WorldBrowser.TimeStamp=2023.09.29-21.14.18
+WorldBrowser.LastCompileMethod=Unknown
+EasyBallistics.TimeStamp=2023.10.04-02.59.12
+EasyBallistics.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1509,12 +1602,13 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem1=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MENU
-MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
-MRUItem3=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
-MRUItem4=/Game/bodycamFPSkit/Maps/Map_Test
-MRUItem5=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
+MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
+MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/Shotgun/BP_Weapon_Pickup_Shotgun
+MRUItem2=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem3=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MENU
+MRUItem4=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
+MRUItem5=/Game/bodycamFPSkit/Maps/Map_Test
+MRUItem6=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1529,7 +1623,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol
+ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1640,6 +1734,10 @@ TreeViewWidth=0.300000
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol.BP_Weapon_Pistol=1
+/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD.UI_HUD=1
+/Game/bodycamFPSkit/Blueprints/Widgets/UI_MENU.UI_MENU=1
+/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
+/Game/bodycamFPSkit/Blueprints/Weapons/Shotgun/BP_Weapon_Pickup_Shotgun.BP_Weapon_Pickup_Shotgun=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1690,4 +1788,12 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[PluginBrowser]
+InstalledPlugins=EasyBallistics
+InstalledPlugins=WMFCodecs
+
+[WorldBrowser]
+DisplayPaths=False
+DisplayActorsCount=False
 
