--- a/cashu_devbranch.uproject
+++ b/cashu_devbranch.uproject
@@ -29,6 +29,11 @@
 			"Name": "DLSS",
 			"Enabled": false,
 			"MarketplaceURL": "https://www.unrealengine.com/marketplace/en-US/product/nvidia-dlss"
+		},
+		{
+			"Name": "EasyBallistics",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/bbecde0f66914263b57fd2af5a0c7ffe"
 		}
 	]
 }
