Edit: refactor glock and deagle pistols

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,11 +171,13 @@ MRUItem4=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
 LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -619,6 +621,63 @@ LevelStreamingVolume.HLOD=True
 LevelStreamingVolume.Networking=True
 LevelStreamingVolume.Actor=True
 LevelStreamingDynamic.LevelStreaming=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Physics=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+SkeletalMesh.Deformer=True
+SkeletalMesh.Rendering=True
+BP_Pistol_Deagle_Lowpoly_C.Tick=True
+BP_Pistol_Deagle_Lowpoly_C.Animations=True
+BP_Pistol_Deagle_Lowpoly_C.Weapon=True
+BP_Pistol_Deagle_Lowpoly_C.FireLogic=True
+BP_Pistol_Deagle_Lowpoly_C.WeaponStats=True
+BP_Pistol_Deagle_Lowpoly_C.Default=True
+BP_Pistol_Deagle_Lowpoly_C.ADS=True
+BP_Pistol_Deagle_Lowpoly_C.WeaponClip=True
+BP_Pistol_Deagle_Lowpoly_C.Audio=True
+BP_Pistol_Deagle_Lowpoly_C.Procedural Anims=True
+BP_Pistol_Deagle_Lowpoly_C.Weapon Stats=True
+BP_Pistol_Deagle_Lowpoly_C.Replication=True
+BP_Pistol_Deagle_Lowpoly_C.Rendering=True
+BP_Pistol_Deagle_Lowpoly_C.Collision=True
+BP_Pistol_Deagle_Lowpoly_C.Actor=True
+BP_Pistol_Deagle_Lowpoly_C.Input=True
+BP_Pistol_Deagle_Lowpoly_C.HLOD=True
+BP_Pistol_Deagle_Lowpoly_C.Physics=True
+BP_Pistol_Deagle_Lowpoly_C.WorldPartition=True
+BP_Pistol_Deagle_Lowpoly_C.Events=True
+BP_Pistol_Glock_Lowpoly_C.Tick=True
+BP_Pistol_Glock_Lowpoly_C.Animations=True
+BP_Pistol_Glock_Lowpoly_C.Weapon=True
+BP_Pistol_Glock_Lowpoly_C.FireLogic=True
+BP_Pistol_Glock_Lowpoly_C.WeaponStats=True
+BP_Pistol_Glock_Lowpoly_C.Default=True
+BP_Pistol_Glock_Lowpoly_C.ADS=True
+BP_Pistol_Glock_Lowpoly_C.WeaponClip=True
+BP_Pistol_Glock_Lowpoly_C.Audio=True
+BP_Pistol_Glock_Lowpoly_C.Procedural Anims=True
+BP_Pistol_Glock_Lowpoly_C.Weapon Stats=True
+BP_Pistol_Glock_Lowpoly_C.Replication=True
+BP_Pistol_Glock_Lowpoly_C.Rendering=True
+BP_Pistol_Glock_Lowpoly_C.Collision=True
+BP_Pistol_Glock_Lowpoly_C.Actor=True
+BP_Pistol_Glock_Lowpoly_C.Input=True
+BP_Pistol_Glock_Lowpoly_C.HLOD=True
+BP_Pistol_Glock_Lowpoly_C.Physics=True
+BP_Pistol_Glock_Lowpoly_C.WorldPartition=True
+BP_Pistol_Glock_Lowpoly_C.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1720,15 +1779,17 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture/SM_A02_Arch_Floor_Elevator
-MRUItem1=/Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture/SM_A02_Arch_Floor
-MRUItem2=/Game/bodycamFPSkit/Maps/Map_Lobby
-MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
-MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/Shotgun/BP_Weapon_Pickup_Shotgun
-MRUItem5=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem6=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MENU
-MRUItem7=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
-MRUItem8=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
+MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/Glock_Lowpoly/BP_Pistol_Glock_Lowpoly
+MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/Glock_Lowpoly/SK_Pistol_Glock_Lowpoly
+MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/Deagle_Lowpoly/BP_Pistol_Deagle_Lowpoly
+MRUItem3=/Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture/SM_A02_Arch_Floor_Elevator
+MRUItem4=/Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture/SM_A02_Arch_Floor
+MRUItem5=/Game/bodycamFPSkit/Maps/Map_Lobby
+MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/Shotgun/BP_Weapon_Pickup_Shotgun
+MRUItem7=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem8=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MENU
+MRUItem9=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
+MRUItem10=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1743,7 +1804,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit
+ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit/Blueprints/Weapons
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1786,7 +1847,7 @@ ContentBrowserTab2.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab2.SelectedPaths=/Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture
+ContentBrowserTab2.SelectedPaths=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/HeavyPistol
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.SelectedCollections=
@@ -1908,6 +1969,10 @@ TreeViewWidth=0.300000
 /Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture/SM_A02_Arch_Floor.SM_A02_Arch_Floor=0
 /Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture/arch_floor_cut/SM_A02_Arch_Floor_001.SM_A02_Arch_Floor_001=0
 /Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture/SM_A02_Arch_Floor_Elevator.SM_A02_Arch_Floor_Elevator=0
+/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/X87/SK_Pistol_Mesh.SK_Pistol_Mesh=1
+/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/Deagle_Lowpoly/BP_Pistol_Deagle_Lowpoly.BP_Pistol_Deagle_Lowpoly=1
+/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/Glock_Lowpoly/SK_Pistol_Glock_Lowpoly.SK_Pistol_Glock_Lowpoly=1
+/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/Glock_Lowpoly/BP_Pistol_Glock_Lowpoly.BP_Pistol_Glock_Lowpoly=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2393,4 +2458,50 @@ WarnOnHiddenLevelsBeforeRebuild=False
 
 [DetailCustomWidgetExpansion]
 LevelStreamingDynamic=LevelStreamingDynamic.LevelStreaming.EditorStreamingVolumes
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+DefaultBoneColor=(R=0.000000,G=0.000000,B=0.025000,A=1.000000)
+SelectedBoneColor=(R=0.200000,G=1.000000,B=0.200000,A=1.000000)
+AffectedBoneColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+DisabledBoneColor=(R=0.400000,G=0.400000,B=0.400000,A=1.000000)
+ParentOfSelectedBoneColor=(R=0.850000,G=0.450000,B=0.120000,A=1.000000)
+VirtualBoneColor=(R=0.400000,G=0.400000,B=1.000000,A=1.000000)
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bPauseAnimationOnCameraMove=False
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+bAllowIncompatibleSkeletonSelection=False
+bUseTreeViewForAnimationCurves=False
+AnimationCurveGroupingDelimiters="._/|\\"
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
 
