Edit: set black elevators peristent level as default editor level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/bodycamFPSkit/Blueprints/GM_Menu.GM_Menu_C
-EditorStartupMap=/Game/bodycamFPSkit/Maps/Map_Test.Map_Test
+EditorStartupMap=/Game/Maps/Black/Map_Black_Elevators.Map_Black_Elevators
 GameDefaultMap=/Game/bodycamFPSkit/Maps/Map_Menu.Map_Menu
 
 [/Script/Engine.Engine]
