Config: enable world partition streaming

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -182,7 +182,7 @@ MRUItem11=/Game/bodycamFPSkit/Maps/Map_Test_Persistent_Backup
 LastLevel=/Game/Maps/Black/Map_Black_Elevators
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
@@ -1031,6 +1031,7 @@ UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -1391,7 +1392,6 @@ BP_Level_Streamer_Flipflop_C.Actor=True
 BP_Level_Streamer_Flipflop_C.Tick=True
 BP_Level_Streamer_Flipflop_C.WorldPartition=True
 BP_Level_Streamer_Flipflop_C.Events=True
-UMGEditorProjectSettings.Designer =True
 AssetManagerSettings.Asset Registry=True
 AudioSettings.Panning=True
 Engine.PerQualityLevelProperty=True
@@ -2519,8 +2519,8 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Maps/Black/Map_Black_Elevators
-MRUItem1=/Game/Maps/BP_Level_Streamer_Flipflop
+MRUItem0=/Game/Maps/BP_Level_Streamer_Flipflop
+MRUItem1=/Game/Maps/Black/Map_Black_Elevators
 MRUItem2=/Game/Maps/Black/Map_Black_Lobby
 MRUItem3=/Game/bodycamFPSkit/Maps/Map_Menu
 MRUItem4=/Game/bodycamFPSkit/Maps/Map_Lobby_All
@@ -2559,7 +2559,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Maps/Orange
+ContentBrowserDrawer.SelectedPaths=/Game/Maps/Black
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3381,7 +3381,7 @@ BoxComponent=BoxComponent.Collision.Collision
 BP_LevelStream_Flipflop_C=
 K2Node_VariableGet=BoxComponent.Collision.Collision
 BP_Level_Streamer_Flipflop_C=BoxComponent.Collision.Collision
-SceneComponent=
+SceneComponent=BoxComponent.Collision.Collision
 InputModifierDeadZone=
 InputModifierResponseCurveExponential=
 InputModifierFOVScaling=
