Config: enable Lumen

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,3 +99,8 @@ GameName=cashu_devbranch
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.RendererSettings]
+r.ReflectionMethod=1
+r.GenerateMeshDistanceFields=True
+r.DynamicGlobalIlluminationMethod=1
+
