--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1601,11 +1601,54 @@ BP_CalculateWeaponSocketOffset_C.HLOD=True
 BP_CalculateWeaponSocketOffset_C.Physics=True
 BP_CalculateWeaponSocketOffset_C.WorldPartition=True
 BP_CalculateWeaponSocketOffset_C.Events=True
+Ultra_Dynamic_Sky_C.TransformCommon=True
+Ultra_Dynamic_Sky_C.Basic Controls=True
+Ultra_Dynamic_Sky_C.Animate Time Of Day=True
+Ultra_Dynamic_Sky_C.Volumetric Clouds=True
+Ultra_Dynamic_Sky_C.2D Dynamic Clouds=True
+Ultra_Dynamic_Sky_C.Static Clouds=True
+Ultra_Dynamic_Sky_C.Cloud Movement=True
+Ultra_Dynamic_Sky_C.Cloud Shadows=True
+Ultra_Dynamic_Sky_C.Cloud Wisps=True
+Ultra_Dynamic_Sky_C.Simulation=True
+Ultra_Dynamic_Sky_C.Sun=True
+Ultra_Dynamic_Sky_C.Moon=True
+Ultra_Dynamic_Sky_C.Sky Light=True
+Ultra_Dynamic_Sky_C.Capture Based Sky Light=True
+Ultra_Dynamic_Sky_C.Custom Cubemap Sky Light=True
+Ultra_Dynamic_Sky_C.Dynamic Tinted Sky Light=True
+Ultra_Dynamic_Sky_C.Exposure=True
+Ultra_Dynamic_Sky_C.Fog Color=True
+Ultra_Dynamic_Sky_C.Fog Density=True
+Ultra_Dynamic_Sky_C.Volumetric Fog=True
+Ultra_Dynamic_Sky_C.Dust=True
+Ultra_Dynamic_Sky_C.Sky Atmosphere=True
+Ultra_Dynamic_Sky_C.Simplified Color=True
+Ultra_Dynamic_Sky_C.Stars=True
+Ultra_Dynamic_Sky_C.Space Layer=True
+Ultra_Dynamic_Sky_C.Volumetric Cloud Light Rays=True
+Ultra_Dynamic_Sky_C.Sky Glow=True
+Ultra_Dynamic_Sky_C.Lens Flare=True
+Ultra_Dynamic_Sky_C.Screen Space Light Shafts=True
+Ultra_Dynamic_Sky_C.Post Processing=True
+Ultra_Dynamic_Sky_C.Aurora=True
+Ultra_Dynamic_Sky_C.Water=True
+Ultra_Dynamic_Sky_C.Interior Adjustments=True
+Ultra_Dynamic_Sky_C.Volumetric Cloud Painting=True
+Ultra_Dynamic_Sky_C.Component Selection=True
+Ultra_Dynamic_Sky_C.Mobile=True
+Ultra_Dynamic_Sky_C.Replication=True
+Ultra_Dynamic_Sky_C.Rendering=True
+Ultra_Dynamic_Sky_C.HLOD=True
+Ultra_Dynamic_Sky_C.Physics=True
+Ultra_Dynamic_Sky_C.Networking=True
+Ultra_Dynamic_Sky_C.WorldPartition=True
+Ultra_Dynamic_Sky_C.Actor=True
 
 [RootWindow]
 ScreenPosition=X=141.000 Y=52.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3028,6 +3071,7 @@ BoneProxy="\"Object\" "
 SkeletalMeshSocket="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
+BillboardComponent="\"Object\" "
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -3363,6 +3407,7 @@ bUseGLTFMaterialInstanceLibrary=False
 Results=None
 
 [PlacementMode]
+RecentlyPlaced=/Game/UltraDynamicSky/Blueprints/Ultra_Dynamic_Sky.Ultra_Dynamic_Sky;
 RecentlyPlaced=/Game/Maps/BP_Level_Load.BP_Level_Load;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Maps/Black/BP_Level_Streamer_Flipflop.BP_Level_Streamer_Flipflop;
@@ -3770,7 +3815,7 @@ BoxComponent=BoxComponent.Collision.Collision
 BP_LevelStream_Flipflop_C=
 K2Node_VariableGet=BoxComponent.Collision.Collision
 BP_Level_Streamer_Flipflop_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision
-SceneComponent=BoxComponent.Collision.Collision
+SceneComponent=
 InputModifierDeadZone=
 InputModifierResponseCurveExponential=
 InputModifierFOVScaling=
@@ -3816,6 +3861,7 @@ BP_Map_Trigger_Loadlevel_C=BoxComponent.Collision.Collision,CapsuleComponent.Col
 BP_Level_Load_C=BoxComponent.Collision.Collision
 EdGraph=BoxComponent.Collision.Collision,SphereComponent.Collision.Collision
 DirectionalLight=CapsuleComponent.Collision.Collision,BoxComponent.Collision.Collision
+WorldPartitionMiniMap=BoxComponent.Collision.Collision
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
