--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -3637,7 +3637,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Cashew/Light
+ContentBrowserDrawer.SelectedPaths=/Game/ExampleContent/Substrate/Materials/Materials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4282,8 +4282,10 @@ bUseGLTFMaterialInstanceLibrary=False
 Results=None
 
 [PlacementMode]
-RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/Glock_Lowpoly/BP_Pickup_Pistol_Glock_Lowpoly.BP_Pickup_Pistol_Glock_Lowpoly;
+RecentlyPlaced=/Game/ExampleContent/Substrate/Materials/Materials/M_Substrate_ShaderBall_Opal.M_Substrate_ShaderBall_Opal;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/Glock_Lowpoly/BP_Pickup_Pistol_Glock_Lowpoly.BP_Pickup_Pistol_Glock_Lowpoly;
 RecentlyPlaced=/Game/Maps/BP_Level_Load.BP_Level_Load;
 RecentlyPlaced=/Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture/SM_A02_Arch_LiftWall_L.SM_A02_Arch_LiftWall_L;
 RecentlyPlaced=/Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture/SM_A02_Arch_LiftWall_R.SM_A02_Arch_LiftWall_R;
@@ -4300,8 +4302,6 @@ RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/Wizz/BP_Wizz_Spawne
 RecentlyPlaced=/Game/SCL_Assets/02_Lobby/Assets/Mesh/Furniture/SM_A02_Furn_Armchair.SM_A02_Furn_Armchair;
 RecentlyPlaced=/Game/SCL_Assets/02_Lobby/Assets/Mesh/Architecture/SM_A02_Arch_Frame_F.SM_A02_Arch_Frame_F;
 RecentlyPlaced=/Game/bodycamFPSkit/Maps/BP_LevelStream_Flipflop.BP_LevelStream_Flipflop;
-RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/Wizz/BP_Pistol_Wizz.BP_Pistol_Wizz;
-RecentlyPlaced=/Script/Engine.LevelStreamingVolume;/Engine/Transient.ActorFactoryBoxVolume_5
 
 [MaterialEditor]
 PrimType=1
@@ -4691,7 +4691,7 @@ BoxComponent=BoxComponent.Collision.Collision
 BP_LevelStream_Flipflop_C=
 K2Node_VariableGet=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision
 BP_Level_Streamer_Flipflop_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision
-SceneComponent=
+SceneComponent=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision
 InputModifierDeadZone=
 InputModifierResponseCurveExponential=
 InputModifierFOVScaling=
