Add: hu enum global variable to bp_firstpersoncharacter

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -3789,8 +3789,8 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/hu/E_hu
-MRUItem1=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/hu/E_hu
 MRUItem2=/Game/Materials/M_Neon_Meshaccent
 MRUItem3=/Game/Materials/M_Neon_Lightsource
 MRUItem4=/Game/Levels/Black/L_Black_Cube
@@ -4922,7 +4922,7 @@ SkeletalMesh=SkeletalMesh.ImportSettings.Transform
 LODInfoUILayout=
 BoxComponent=BoxComponent.Collision.Collision
 BP_LevelStream_Flipflop_C=
-K2Node_VariableGet=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision
+K2Node_VariableGet=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 BP_Level_Streamer_Flipflop_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision
 SceneComponent=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision
 InputModifierDeadZone=
@@ -4948,8 +4948,8 @@ SphereComponent=
 LevelStreamingVolume=BoxComponent.Collision.Collision
 BrushComponent=BoxComponent.Collision.Collision
 SkeletalMeshComponent=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
-BP_FirstPersonCharacter_C=BoxComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Collision.Collision
-CapsuleComponent=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision
+BP_FirstPersonCharacter_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
+CapsuleComponent=
 BP_Weapon_Base_C=BoxComponent.Collision.Collision
 BP_Sky_Sphere_C=BoxComponent.Collision.Collision
 BP_Wizz_Linetrace_C=BoxComponent.Collision.Collision
